--- a/index/index.css
+++ b/index/index.css
@@ -7,7 +7,9 @@
 
 
 
-
+.mainPartOne{
+    background-color: indigo;
+}
 .carouselWBtns{
     width: 70%;
     background-color: teal;
@@ -73,6 +75,8 @@
     width: 200%;
     height: 100%;
 }
+
+
 .item2{
     width: 10%;
     height: 100%;
@@ -80,6 +84,26 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+}
+
+.item2Img{
+    width: 100%;
+    height: 85%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.item2Price{
+    width: 60%;
+    height: 15%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    background-color: lightgrey;
+    border-radius: 3px;
+
 }
 
 
