--- a/index/index.css
+++ b/index/index.css
@@ -36,7 +36,7 @@
     transition: transform 0.3s;
     display: flex;
     flex-wrap: nowrap;
-    width: 300%;
+    width: 400%;
     height: 100%;
 }
 
@@ -48,6 +48,83 @@
     justify-content: center;
     align-items: center;
 }
+
+.item1BigImg{
+    width: 50%;
+    height: 100%;
+    border-right: 2px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.itemBigHalf2{
+    width: 50%;
+    height: 100%;
+}
+
+.gameBigTitle{
+    width: 79.9%;
+    height: 10%;
+    background-color: mediumspringgreen;
+    display: flex;
+    align-items: center;
+    padding-left: 20%;
+}
+
+.item1Group{
+    height: 65%;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 5%;
+}
+.slot{
+    margin-bottom: 2.5%;
+    margin-left: 7%;
+    margin-top: 5%;
+    width: 40%;
+    height: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    border: 2px solid black;
+}
+
+.item1UnderInfo{
+    height: 20%;
+    width: 79.9%;
+    display: flex;
+    flex-direction: column;
+}
+
+
+.tag{
+    background-color: gray;
+    padding: 1%;
+    border-radius: 3px;
+}
+
+.item1Price{
+    margin-top: 10%;
+    margin-left: 2%;
+    background-color: gray;
+    width: 20%;
+    border-radius: 3px;
+    text-align: end;
+}
+
+.item1Tags{
+    width: 100%;
+    height: 10%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+
 .cBtn{
     height: 20%;
     width: 2%;
