--- a/index/index.css
+++ b/index/index.css
@@ -1,148 +1,226 @@
-
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0 auto;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-
-
-
-.mainPartOne{
-    background-color: indigo;
+.mainPartOne {
+  background-color: indigo;
 }
-.carouselWBtns{
-    width: 70%;
-    background-color: teal;
-    display: flex;
-    align-items: center;
+.carouselWBtns {
+  width: 70%;
+  background-color: teal;
+  display: flex;
+  align-items: center;
 }
 
-.carousel{
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
+.carousel {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
-.mainOne{
-    width: 100vw;
-    height: 60vh;
-    background-color: orange;
-    display: flex;
-    justify-content: center;
+.mainOne {
+  width: 100vw;
+  height: 60vh;
+  background-color: orange;
+  display: flex;
+  justify-content: center;
 }
 
-.inner{
-    transform: translateX(-0%);
-    transition: transform 0.3s;
-    display: flex;
-    flex-wrap: nowrap;
-    width: 300%;
-    height: 100%;
+.inner {
+  transform: translateX(-0%);
+  transition: transform 0.3s;
+  display: flex;
+  flex-wrap: nowrap;
+  width: 300%;
+  height: 100%;
 }
 
-.item{
-    width: 100%;
-    height: 100%;
-    background-color: green;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.item {
+  width: 100%;
+  height: 100%;
+  background-color: green;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.cBtn{
-    height: 20%;
-    width: 2%;
-    font-size: 100%;
+.cBtn {
+  height: 20%;
+  width: 2%;
+  font-size: 100%;
 }
-.prev{
-    transform: rotate(180deg);
-}
-
-
-
-.mainTwo{
-    margin-top: 5vh;
-    width: 100vw;
-    height: 20vh;
-    background-color: orange;
-    display: flex;
-    justify-content: center;
-}
-.inner2{
-    transform: translateX(-0%);
-    transition: transform 0.3s;
-    display: flex;
-    flex-wrap: nowrap;
-    width: 200%;
-    height: 100%;
+.prev {
+  transform: rotate(180deg);
 }
 
-
-.item2{
-    width: 10%;
-    height: 100%;
-    background-color: gray;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+.mainTwo {
+  margin-top: 5vh;
+  width: 100vw;
+  height: 20vh;
+  background-color: orange;
+  display: flex;
+  justify-content: center;
+}
+.inner2 {
+  transform: translateX(-0%);
+  transition: transform 0.3s;
+  display: flex;
+  flex-wrap: nowrap;
+  width: 200%;
+  height: 100%;
 }
 
-.item2Img{
-    width: 100%;
-    height: 85%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.item2 {
+  width: 10%;
+  height: 100%;
+  background-color: gray;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-.item2Price{
-    width: 60%;
-    height: 15%;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    background-color: lightgrey;
-    border-radius: 3px;
-
+.item2Img {
+  width: 100%;
+  height: 85%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-
-.mainThree{
-    margin-top: 5vh;
-    width: 100vw;
-    height: 50vh;
-    background-color: red;
-    display: flex;
-    justify-content: center;
+.item2Price {
+  width: 60%;
+  height: 15%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  background-color: lightgrey;
+  border-radius: 3px;
 }
 
-.inner3{
-    transform: translateX(-0%);
-    transition: transform 0.3s;
-    display: flex;
-    flex-wrap: nowrap;
-    width: 200%;
-    height: 100%;
+.mainThree {
+  margin-top: 5vh;
+  width: 100vw;
+  height: 50vh;
+  background-color: red;
+  display: flex;
+  justify-content: center;
 }
-.item3{
-    width: 50%;
-    height: 50%;
-    background-color: blue;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
+.inner3 {
+  transform: translateX(-0%);
+  transition: transform 0.3s;
+  display: flex;
+  flex-wrap: nowrap;
+  width: 200%;
+  height: 100%;
 }
-.bigItem3{
-    width: 30%;
-    height: 100%;
-    background-color: purple;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.item3 {
+  width: 50%;
+  height: 50%;
+  background-color: blue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.itemGroup3{
-    width: 70%;
-    height: 100%;
-    display: flex;
-    flex-wrap: wrap;
+.bigItem3 {
+  width: 30%;
+  height: 100%;
+  background-color: purple;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.itemGroup3 {
+  width: 70%;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+/* ! ---------Section 4 properties--------  */
+
+/* ! ------color for 4 container----- */
+:root {
+  --text: #677381;
+  --link: white;
+  --button-bg: #459e1a;
+  --button-text: #00ff19;
+  --button-text-hover: #bcf005;
+  --section-background: black;
+}
+
+.container-4-flex {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
+  align-content: center;
+  background-color: var(--section-background);
+  padding-bottom: 1em;
+  padding-top: 1em;
+  font-family: Helvetica;
+}
+
+/* --- Item-1 div --- */
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+  .item-1-top-h1,
+  .item-1-top-p {
+    text-align: center;
+  }
+}
+
+.item-1-top {
+  flex-grow: 2;
+}
+
+.item-1-top-h1 {
+  margin-top: 0.5em;
+}
+
+.item-1-top-p,
+.item-2-bottom-p {
+  margin-top: 1em;
+}
+
+.item-1-top,
+.item-2-bottom-p {
+  color: var(--text);
+}
+
+/* --- Item-2 div --- */
+
+.item-2-bottom {
+  flex-grow: 2;
+  text-align: center;
+}
+
+.item-2-bottom button {
+  margin-top: 1em;
+  padding-left: 1.5em;
+  padding-right: 1.5em;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+}
+
+.item-2-bottom-p a {
+  color: var(--link);
+}
+
+.log-in-btn {
+  background-color: var(--button-bg);
+  color: var(--button-text);
+  border: none;
+}
+
+.log-in-btn:hover {
+  background-color: var(--button-text-hover);
+  color: var(--link);
+}
+
+.item-2-bottom-p a {
+  text-decoration: none;
 }
