--- a/index/main_part_one_style.css
+++ b/index/main_part_one_style.css
@@ -1,10 +1,14 @@
 
-.mainPartOne {
-    background-color: indigo;
+  .mainPartOne{
+    background-color: #3a3b3a;
+    padding-top: 2%;
+    padding-bottom: 2%;
   }
+
+
   .carouselWBtns {
     width: 70%;
-    background-color: teal;
+    background-color: #3a3b3a;
     display: flex;
     align-items: center;
   }
@@ -16,9 +20,7 @@
   }
   
   .mainOne {
-    width: 100vw;
     height: 40vh;
-    background-color: orange;
     display: flex;
     justify-content: center;
   }
@@ -128,6 +130,10 @@
     height: 20%;
     width: 2%;
     font-size: 100%;
+    border-bottom-right-radius: 50px;
+    border-top-right-radius: 50px;
+    margin-left: 5px;
+    margin-right: 5px;
   }
   .prev {
     transform: rotate(180deg);
@@ -135,9 +141,8 @@
   
   .mainTwo {
     margin-top: 5vh;
-    width: 100vw;
     height: 20vh;
-    background-color: orange;
+    background-color: #3a3b3a;
     display: flex;
     justify-content: center;
   }
@@ -156,7 +161,7 @@
     background-color: gray;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
     flex-direction: column;
   }
   
@@ -166,23 +171,24 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: darkgray;
   }
   
   .item2Price {
-    width: 60%;
+    width: 25%;
     height: 15%;
+    margin-right: 5%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
-    background-color: lightgrey;
+    background-color: darkgray;
     border-radius: 3px;
   }
   
   .mainThree {
     margin-top: 5vh;
-    width: 100vw;
-    height: 50vh;
-    background-color: red;
+    height: 40vh;
+    background-color: #3a3b3a;
     display: flex;
     justify-content: center;
   }
@@ -198,8 +204,8 @@
   .item3 {
     width: 50%;
     height: 50%;
-    background-color: blue;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
   }
@@ -208,8 +214,41 @@
     height: 100%;
     background-color: purple;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+  }
+  .bigItem3Img{
+    height: 90%;
+    background-color: darkgray;
+    width: 100%;
+  }
+  .bigItem3Under{
+    height: 10%;
+    background-color: gray;
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+  .item3Sale{
+    background-color: lawngreen;
+    height: 80%;
+    border-radius: 3px;
+    width: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .item3Price{
+    background-color: lightslategray;
+    height: 80%;
+    border-radius: 3px;
+    width: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 2%;
   }
   .itemGroup3 {
     width: 70%;
