--- a/index/index.css
+++ b/index/index.css
@@ -171,3 +171,56 @@ img {       /* Store Logo */
 .item-2-bottom-p a {
   text-decoration: none;
 }
+
+
+/*----- FOOTER -----*/
+
+.mainFooter{
+  background-color: rgb(99, 98, 98);
+  height: 230px;
+}
+.FAQ{
+  background-color: lightgray;
+  margin: 0 250px;
+  padding-bottom: 3px;
+}
+.FAQ p{
+padding-left: 10px;
+font-weight: bold;
+}
+
+h1{
+  background-color: rgb(177, 173, 173);
+  text-align: center;
+  font-size: 24px;
+}
+a {
+  color: black;
+}
+a:link {
+  text-decoration: none;
+}
+
+img {
+  border: 3px solid #ddd;
+  border-radius: 4px;
+  width: 60px;
+  border-radius: 50%;
+  margin-left: 30px;
+}
+.logo-end{
+  padding-top: 50px;
+  height: 100px;
+}
+
+.endFooter{
+  text-align: center;
+  margin-right: 200px;
+  margin-left: 200px;
+  font-size: 15px
+}
+.logo{
+float: left;
+padding-left: 150px;
+padding-bottom: 50px;
+}
