--- a/index/main_part_one_style.css
+++ b/index/main_part_one_style.css
@@ -256,3 +256,14 @@
     display: flex;
     flex-wrap: wrap;
   }
+
+
+
+/*  extra*/
+
+.d-none{
+  display: none;
+}
+.d-default{
+  display: block;
+}
