--- a/index/CSS/index.css
+++ b/index/CSS/index.css
@@ -5,7 +5,6 @@
 }
 /*----- HEADER SECTIION -----*/
 .d-flex {
-  /* Header */
   background-color: black;
   display: flex;
   flex-flow: row wrap;
@@ -15,7 +14,6 @@
 
 .left-nav,
 .right-nav {
-  /* Headers' both parts as a row direction with basis */
   display: flex;
   flex-flow: row wrap;
   flex-basis: 50%;
@@ -23,7 +21,6 @@
 }
 
 .left-nav {
-  /* Headers' first part */
   display: flex;
   flex-flow: row wrap;
   justify-content: space-evenly;
@@ -31,13 +28,11 @@
 }
 
 .store-logo {
-  /* Store Logo */
   width: 30px;
   margin-left: 5em;
 }
 
 .left-nav ul {
-  /* Headers' first part list */
   display: inline-flex;
   list-style-type: none;
   padding: 1em;
@@ -49,13 +44,11 @@
 }
 
 .right-nav {
-  /* Headers' second part */
   justify-content: flex-end;
   align-items: flex-start;
 }
 
 .right-nav > ul:nth-child(1) {
-  /* Headers' second part first child-list */
   display: flex;
   list-style-type: none;
   margin: 0 5em;
@@ -96,8 +89,6 @@
 .right-nav > ul li:hover > .language-menu {
   display: block;
 }
-
-/* Headers' second part second child-dropdown */
 /*----- HEADER SECTIION END -----*/
 /*----- MAIN SECTIION -----*/
 
@@ -194,53 +185,146 @@
 
 /*----- FOOTER -----*/
 
+
 .mainFooter {
   background-color: rgb(99, 98, 98);
-  height: 272px;
-}
-.FAQ {
-  background-color: lightgray;
-  margin: 0 250px;
-  padding-bottom: 3px;
-}
-.FAQ p {
-  padding-left: 10px;
-  font-weight: bold;
+  height: auto;
 }
 
-h1 {
+.FAQ {
+  background-color: lightgray;
+  margin: 0 auto;
+  width: 80%;
+  border-radius: 15px;
+}
+
+footer h1 {
   background-color: rgb(177, 173, 173);
   text-align: center;
   font-size: 24px;
+  padding: 0.2em;
 }
-a {
+
+.faqQuestions {
+  display: block;
+  padding-left: 10px;
+  font-weight: bold;
+  cursor:pointer;
+  margin: 0.5em 0 0 1em;
+  padding: 0.2em;
+}
+
+/* Form display */
+.display-none {
+  display: none;
+}
+
+.display-first {
+  display: flex;
+  flex-flow: column nowrap;
+  animation:out 0.4s ease-in-out;
+}
+
+@keyframes out {
+  0% {
+    transform: translatey(-50%);
+    opacity: 0;
+  }
+  30% {
+    opacity: 0;
+  }
+  100% {
+    transform: translatey(0)
+  }
+}
+
+
+form{
+  display: flex;
+  flex-flow: column wrap;
+  justify-content:center;
+  align-content: flex-start;
+  margin-left: 3em;
+}
+
+
+/* Inside form elements */
+.closeFormBtn {
+  display: block;
+  width: 50px;
+  position: relative;
+  transform: translate(-8vw, 2vh);
+  padding: 0.3em;
+  text-align: center;
+  border: 1px solid black;
+  border-radius: 10px;
+  color:white;
+  background-color: #181d33;
+  cursor: pointer;
+}
+
+input[type='text'] { /* Account username, Topic */
+  padding: 1em;
+  font-size: 0.9em;
+  border: none;
+  border-bottom: 1px solid #525252;
+  border-radius: 10px;
+  color: #000;
+  background-color: transparent;
+}
+
+::placeholder {
+  text-align: center;
   color: black;
 }
-a:link {
-  text-decoration: none;
+
+input:hover, #question:hover {
+  background-color: darkgrey;
+}
+
+#question { /* Question area */
+  padding: 1em;
+  font-size: 1.2em;
+  width: 350px;
+  border: none;
+  border-bottom: 1px solid #525252;
+  border-radius: 10px;
+  background-color: transparent;
+}
+
+input[type='submit'] {
+  position: relative;
+  transform: translate(80%, 0);
+  width: 100px;
+  margin: 0.8em;
+  padding: 0.5em;
+  font-size: 1em;
+  border: none;
+  border-radius: 100px;
+  color:white;
+  background-color: #181d33;
+  cursor: pointer;
+}
+
+.closeFormBtn:hover, input[type='submit']:hover{
+  background-color: #383c50;
 }
 
 img {
   border: 3px solid #ddd;
-  border-radius: 4px;
   width: 60px;
   border-radius: 50%;
-  margin-left: 30px;
 }
 .logo-end {
-  padding-top: 50px;
-  height: 100px;
+  padding: 50px;
 }
 
 .endFooter {
   text-align: center;
-  margin-right: 200px;
-  margin-left: 200px;
+  margin: 0 auto;
   font-size: 15px;
 }
 .logo {
   float: left;
-  padding-left: 150px;
-  padding-bottom: 50px;
+  padding-left: 130px;
 }
-
