--- a/index/CSS/index.css
+++ b/index/CSS/index.css
@@ -6,11 +6,13 @@
 /*----- HEADER SECTIION -----*/
 .d-flex {
   /* Header */
-  background-color: black;
   display: flex;
   flex-flow: row wrap;
   padding: 0.5em;
   color: white;
+  background-image: url(https://images.alphacoders.com/743/thumb-1920-74381.JPG);
+  background-position: center;
+  background-attachment: fixed;
 }
 
 .left-nav,
@@ -18,8 +20,8 @@
   /* Headers' both parts as a row direction with basis */
   display: flex;
   flex-flow: row wrap;
-  flex-basis: 50%;
   flex-grow: 1;
+  margin-top: 5em;
 }
 
 .left-nav {
@@ -28,12 +30,14 @@
   flex-flow: row wrap;
   justify-content: space-evenly;
   align-items: center;
+  flex-basis: 60%;
 }
 
-.store-logo {
+.store-logo img {
   /* Store Logo */
-  width: 30px;
-  margin-left: 5em;
+  max-width: 150px;
+  height: auto;
+  object-fit: cover;
 }
 
 .left-nav ul {
@@ -41,17 +45,33 @@
   display: inline-flex;
   list-style-type: none;
   padding: 1em;
+  margin: 0;
+  border-bottom: 1px solid white;
+
 }
 
 .left-nav ul li {
   padding: 0.5em;
-  font-size: 1.2em;
+  font-size: 1.5em;
+  transition: 500ms ease-in-out;
+}
+
+.left-nav li:hover {
+  border-radius: 15px;
+  box-shadow: 0 50px 10px #af83318e inset;
 }
 
 .right-nav {
   /* Headers' second part */
+  display: flex;
+  flex-flow: row wrap;
   justify-content: flex-end;
-  align-items: flex-start;
+  align-items: baseline;
+  flex-basis: 40%;
+}
+
+.regBtns {
+  display: inline-flex;
 }
 
 .right-nav > ul:nth-child(1) {
@@ -59,21 +79,23 @@
   display: flex;
   list-style-type: none;
   margin: 0 5em;
-}
+  padding: 1em;
+  border-bottom: 1px solid white;
+} 
 
 .right-nav ul li {
-  border: 2px solid rgb(83, 83, 83);
   border-radius: 20px;
   background-color: black;
   padding: 0.8em;
   margin: 0.1em;
   font-size: 1em;
+  transition: 500ms ease-in-out;
 }
 
 .right-nav ul li:hover {
-  background-color: #dfa63c25;
+  box-shadow: 0 50px 10px #af83318e inset;
   cursor: pointer;
-}
+} 
 
 .right-nav a,
 .left-nav a {
@@ -97,7 +119,6 @@
   display: block;
 }
 
-/* Headers' second part second child-dropdown */
 /*----- HEADER SECTIION END -----*/
 /*----- MAIN SECTIION -----*/
 
@@ -195,23 +216,29 @@
 /*----- FOOTER -----*/
 
 .mainFooter {
-  background-color: rgb(99, 98, 98);
-  height: 272px;
+  background-image: url(https://images.alphacoders.com/743/thumb-1920-74381.JPG);
+  background-position: center;
+  background-attachment: fixed;
 }
 .FAQ {
-  background-color: lightgray;
   margin: 0 250px;
   padding-bottom: 3px;
+  background-color: rgba(245, 245, 245, 0.685);
 }
 .FAQ p {
   padding-left: 10px;
   font-weight: bold;
 }
 
+.FAQ > p:nth-child(2) {
+  text-align: center;
+  font-size: 20px;
+  padding-bottom: .8em;
+}
 h1 {
-  background-color: rgb(177, 173, 173);
   text-align: center;
   font-size: 24px;
+  padding: .3em;
 }
 a {
   color: black;
@@ -220,16 +247,17 @@ a:link {
   text-decoration: none;
 }
 
-img {
+footer img {
   border: 3px solid #ddd;
   border-radius: 4px;
   width: 60px;
   border-radius: 50%;
   margin-left: 30px;
 }
+
 .logo-end {
   padding-top: 50px;
-  height: 100px;
+  background-color: rgba(245, 245, 245, 0.685);
 }
 
 .endFooter {
@@ -237,10 +265,10 @@ img {
   margin-right: 200px;
   margin-left: 200px;
   font-size: 15px;
+  height: 10vh;
 }
 .logo {
   float: left;
   padding-left: 150px;
-  padding-bottom: 50px;
 }
 
