--- a/index/CSS/login.css
+++ b/index/CSS/login.css
@@ -12,11 +12,6 @@
     --button-background: #324b4a;
   }
   
-  /* ! Aura gali tuos properties pakaiesti */
-  header {
-    background-color: aqua;
-  }
-  
   /* ! Main GRID */
   .main-cotainer {
     display: grid;
@@ -139,7 +134,7 @@
   
   /* ! Edgarai gali tuos properties pakaiesti */
   
-  footer {
-    background-color: brown;
+  .footer {
+    background-color: whitesmoke;
   }
   
