--- a/index/CSS/main_part_one_style.css
+++ b/index/CSS/main_part_one_style.css
@@ -47,7 +47,7 @@
   .item1BigImg{
       width: 50%;
       height: 100%;
-      background-color: beige;
+      background-color: #474747;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -56,9 +56,10 @@
   .itemBigHalf2{
     width: 50%;
     height: 100%;
-    background-color: bisque;
+    background-color: #474747;
   }
   .gameBigTitle{
+    margin-top: 3em;
     width: 100%;
     background-color: blueviolet;
     height: 10%;
@@ -68,7 +69,6 @@
   }
 
   .item1Group{
-      margin-top: 2.5%;
       height: 65%;
       width: 100%;
       background-color: gray;
@@ -87,14 +87,12 @@
 
 
   .item1UnderInfo{
-      margin-top: 2.5%;
       height: 10%;
       width: 100%;
-      background-color: darkolivegreen;
   }
   .item1Tags{
       width: 100%;
-      height: 100%;
+      height: 50%;
       display: flex;
       flex-direction: row;
       flex-wrap: nowrap;
@@ -114,12 +112,13 @@
 
   .item1Price{
       width: 20%;
-      text-align: center;
   }
   .item1Price button{
     background-color: greenyellow;
     border: 1px solid black;
+    color: black;
     border-radius: 5px;
+    padding: 2%;
   }
   .item2Price{
     background-color: greenyellow;
@@ -284,4 +283,21 @@
 }
 .d-default{
   display: block;
+}
+
+.slot{
+  width: 50%;
+  height: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.slot img{
+  border-radius: 0;
+  border: none;
+  width: 100%;
+  height: 100%;
+}
+.videoPlayer{
+  width: 100%;
 }
