--- a/index/CSS/login.css
+++ b/index/CSS/login.css
@@ -5,11 +5,11 @@
 }
 
 :root {
-  --item-1-background: #3b8093;
-  --item-2-background: #4d7ba2;
+  --item-1-background: #222222be;
+  --item-2-background: #222222d5;
   --text: #ffffff;
   --input-background: #414a4a;
-  --button-background: #324b4a;
+  --button-background: #2222;
 }
 
 /* ! Main GRID */
@@ -19,43 +19,87 @@
   justify-items: stretch;
   align-items: center;
   text-align: center;
+  width: 100%;
+  border-radius: 25px;
+  margin: 0;
 }
 
 .item-1 {
-  padding-top: 3em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: var(--item-1-background);
+  border-top-left-radius: 35px;
+  border-bottom-left-radius: 35px;
 }
 
 .form-h3 {
   font-weight: lighter;
   font-size: 1.5rem;
-  margin-bottom: 1.3em;
+  margin-bottom: 1.5em;
 }
 
-.main-input {
+.loginPage .main-input {
   background-color: var(--input-background);
   border: none;
-  width: 17.7rem;
-  height: 2.4rem;
-  padding-left: 10px;
+  border-radius: 15px;
+  padding: 1em;
+}
+
+.loginPage .main-input:hover {
+  filter: brightness(80%);
+}
+
+.loginPage .main-label {
+  position: relative;
+  width: 300px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: baseline;
+}
+.loginPage .main-label input {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: var(--input-background);
+}
+.loginPage .main-label span {
+  opacity: 0;
+  position: absolute;
+  transition: 0.6s;
+}
+.loginPage .main-label input:focus ~ span,
+.loginPage .main-label input:valid ~ span{
+  transform: translateX(0) translateY(-25px);
+  opacity:1;
+}
+
+.loginPage .main-input::placeholder {
+  color:white;
+}
+
+.loginPage  .main-input:focus::placeholder {
+  opacity: 0;
+  color:white;
 }
 
 .btn-form-login {
-  padding: 0.6em;
-  width: 7rem;
+  padding: .8em;
+  width: 7em;
   margin-top: 2em;
-  background-color: var(--button-background);
+  background-color: var(--input-background);
   border: none;
 }
 
-.main-label,
+.loginPage .main-label,
 .btn-form-login,
 .item-1-link {
   margin: 0.5em;
 }
 
 .form-h3,
-.main-label,
+.loginPage .main-label,
 .btn-form-login,
 .item-1-link,
 .item-2-text,
@@ -73,6 +117,7 @@
 .btn-form-login,
 .btn-sign-up {
   text-decoration: none;
+  border-radius: 15px;
 }
 
 .item-1-link:hover {
@@ -93,18 +138,20 @@
 
 .item-1,
 .item-2 {
-  width: 100%;
+  width: 500px;
   height: 100%;
 }
 
 .item-2 {
   padding-top: 5em;
-  padding-bottom: 10em;
+  padding-bottom: 5em;
   background-color: var(--item-2-background);
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
+  border-top-right-radius: 35px;
+  border-bottom-right-radius: 35px;
 }
 
 .item-2-text,
@@ -118,8 +165,13 @@
   padding-bottom: 0.5em;
   padding-left: 2em;
   padding-right: 2em;
-  background-color: var(--item-2-background);
+  background-color: var(--button-background);
   border: 1px solid var(--text);
+  transition: 500ms ease-in-out;
+}
+
+.btn-sign-up:hover {
+  box-shadow: 0 50px 10px #af83318e inset;
 }
 
 .item-2-text-2 {
