--- a/index/CSS/register.css
+++ b/index/CSS/register.css
@@ -5,27 +5,36 @@
 }
 
 :root {
-  --main-background: #4d7ba2;
+  --main-background: #222222;
   --text: #ffffff;
   --input-background: #414a4a;
   --button-background: #324b4a;
 }
 
 /* ! Main form */
+body {
+  background-image: url(https://images.alphacoders.com/743/thumb-1920-74381.JPG);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+}
 
 main {
   background-color: var(--main-background);
-  width: 100%;
+  width: 80%;
+  margin: 0 auto;
+  border-radius: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .main-form {
   padding-top: 3em;
   padding-bottom: 3em;
-  width: 100%;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  flex-flow: column wrap;
+  justify-content:center;
   align-content: center;
 }
 
@@ -36,19 +45,16 @@ main {
 
 .main-label,
 .main-select-label {
-  margin: 0.3em;
   font-size: 0.8rem;
+  padding: .6em;
 }
 
 .main-input,
 .main-select {
   width: 17.7rem;
   height: 2.4rem;
-  padding-left: 10px;
-}
-
-.label-bottom {
-  margin-top: 1em;
+  border-radius: 15px;
+  background-color: var(--input-background);
 }
 
 input,
@@ -57,18 +63,19 @@ select {
 }
 
 .btn-form {
-  padding: 0.6em;
-  width: 7rem;
+  padding: 1em;
   margin-top: 1em;
-  background-color: var(--button-background);
+  background-color: var(--input-background);
   color: var(--text);
   text-decoration: none;
   border: none;
   text-align: center;
+  border-radius: 15px;
 }
 
 .btn-form:hover {
   filter: brightness(85%);
+  cursor: pointer;
 }
 
 .form-h3,
@@ -83,14 +90,19 @@ select {
   border: none;
 }
 
+input:hover {
+  filter: brightness(85%);
+}
+
 .label-bottom {
-  width: 25%;
-  padding-left: 1.4em;
+  width: 70%;
+  text-align: center;
+  margin-top: 1em;
 }
 
 .bottom-links {
-  color: var(--input-background);
-  text-decoration: none;
+  color: rgba(252, 252, 252, 0.788);
+  text-decoration: underline;
   font-weight: bold;
 }
 
@@ -98,8 +110,7 @@ select {
   color: black;
 }
 
-/* ! Edgarai gali tuos properties pakaiesti */
-
-.footer {
-  background-color: brown;
+.errs {
+  text-align: center;
+  color: white;
 }
